--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-architect
+title: Student management
+description: Student Management System
+show_downloads: https://drive.google.com/open?id=1fefJ0yRhiPyJRlY2Rn0KYlG_eHZ9Tzyp
